[project]
name = "fep-ja"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AmaseCocoa", email = "cocoa@amase.cc"},
]
dependencies = ["mkdocs>=1.6.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
